<resources>
    <string name="app_name">Happy Place</string>

    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="note_text_no_happy_place_found_yet">No Happy Place Found Yet.Kindly add one.</string>
    <string name="image_content_description">image</string>

    <string name="google_map_api_key">AIzaSyAymWBDEP5EbIKxQXAgeIcwXBXALl89Ah8</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="btn_text_view_on_map">VIEW ON MAP</string>

    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>

</resources>